# CppCourseVKtechnopark

./: CMakeLists.txt  Makefile  README.md  run_linters.sh
.github/workflows/: ci.yml
hw1/project/tests/: CMakeLists.txt
hw1/project/vector_array/: CMakeLists.txt  vector_array.h
project/: CMakeLists.txt  main.c
project/dyn_largest_word/: CMakeLists.txt  dyn_largest_word.c  dyn_largest_word.h
project/st_largest_word/: CMakeLists.txt  st_largest_word.c  st_largest_word.h
project/tests/: CMakeLists.txt  test_dyn_largest_word.cpp  test_st_largest_word.cpp  test_vector_array.cpp  test_words_array.cpp
project/vector_array/: CMakeLists.txt  vector.c  vector.h  vector_array.c  vector_array.h
project/words_array/: CMakeLists.txt  words_arr.c  words_arr.h
